[tool.poetry]
name = "repl-nix-toonitalia"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
splinter = {extras = ["selenium"], version = "^0.21.0"}
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
yt-dlp = "^2024.8.6"
pycryptodomex = "^3.20.0"
api = "^0.0.7"
pyicloud = "^1.0.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
